# aether-next

./: .gitignore  README.md  aether-masque.toml  aether.toml  aether_next_masque_h2.rs  aether_upstream_cargo.toml
.github/workflows/: build.yml  ci.yml  release.yml
Docs/: GUIDE.en.md
aether/: Cargo.toml  aether-masque.toml
aether/src/: account.rs  aethernoize.rs  cache.rs  config.rs  dns.rs  endpoint_cache.rs  engine_config.rs  http_proxy.rs  lastconn.rs  main.rs  masque.rs  masque_h2.rs  mtu.rs  netstack.rs  noize.rs  obfuscation.rs  prober.rs  quic.rs  routing_plane.rs  runtime_env.rs  scan.rs  scan_pool.rs  session.rs  session_event.rs  socks.rs  tls.rs  tun_win.rs  tunnel.rs  tunnelping.rs  wg_prober.rs  wireguard.rs
apps/android/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/android/android/: local.properties.example  settings.gradle.kts
apps/android/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/scripts/: build-engine-android.ps1  build-engine-android.sh  build-hev-tunnel.ps1  sync-www.mjs
apps/android/src/: App.css  App.tsx  bridge.ts
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/scripts/: stage-engine.ps1
apps/desktop/src/: App.css  App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: ActivityTab.tsx  ConnectionTab.tsx  ScannerTab.tsx  SettingsTab.tsx  ui.tsx
apps/desktop/src/hooks/: useLogs.ts  useRuntime.ts  useScanner.ts
scripts/: test_engine.ps1
(+13 files in other folders)
